fix mobile nav p tag collapse

--- a/client/src/stylesheets/mobile_nav.scss
+++ b/client/src/stylesheets/mobile_nav.scss
@@ -218,18 +218,12 @@
       .mobileMenuItem.blogDetailHeader {
         display: inline-block;
         margin-left: 25px;
+        word-break: break-all;
 
         p {
           font-size: 15px;
+          width: 95%;
         }
-        
-        @media (max-width: 320px) {
-          p {
-            width: 150px;
-            white-space: normal;
-          }
-        }
-        
       }
     
       .mobileMenuItem.blogDetailData {
